# meetingbaas-pipecat

./: .env.example  Dockerfile  LICENSE  MULTIPLE.md  README.md  TODO.md  main.py  proxy.py  pyproject.toml  requirements.txt
meetingbaas-pipecat/: bot.py  proxy.py
meetingbaas-pipecat/bot/: __main__.py  bot.py  runner.py
meetingbaas-pipecat/proxy/: __main__.py  cli.py  proxy.py  runner.py
ngrok/: config.yml
protobufs/: frames_pb2.py
scripts/: batch.py  meetingbaas-dev.py  meetingbaas.py  parallel.py
